syntax = "proto3";

package weaviategrpc;

import "google/protobuf/struct.proto";

option go_package = "github.com/weaviate/weaviate/grpc";


service Weaviate {
  rpc Search(SearchRequest) returns (SearchReply) {};
}

message SearchRequest {
  string class_name = 1;
  uint32 limit = 2;
  AdditionalProperties additional_properties = 3;
  NearVectorParams near_vector = 4;
  NearObjectParams near_object = 5;
  Properties properties = 6;
  HybridSearchParams hybrid_search =7;
  BM25SearchParams bm25_search =8;
}

message AdditionalProperties {
  bool uuid = 1;
  bool vector = 2;
  bool creationTimeUnix = 3;
  bool lastUpdateTimeUnix = 4;
  bool distance = 5;
  bool certainty = 6;
  bool score = 7;
  bool explainScore = 8;
}


message Properties {
  repeated string non_ref_properties = 1;
  repeated RefProperties ref_properties = 2;
}

message HybridSearchParams {
  string query = 1;
  repeated string properties = 2;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 3;
  float alpha = 4;
}

message BM25SearchParams {
  string query = 1;
  repeated string properties = 2;
}


message RefProperties {
  string linked_class = 1;
  string reference_property = 2;
  Properties linked_properties = 3;
}

message NearVectorParams {
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message NearObjectParams {
  string id = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message SearchReply {
  repeated SearchResult results = 1;
  float took = 2;
}

message SearchResult {
  ResultProperties properties = 1;
  ResultAdditionalProps additional_properties = 2;
}

message ResultAdditionalProps {
  string id = 1;
  repeated float vector = 2;
  int64 creation_time_unix = 3;
  bool creation_time_unix_present = 4;
  int64 last_update_time_unix = 5;
  bool last_update_time_unix_present = 6;
  float distance = 7;
  bool distance_present = 8;
  float certainty = 9;
  bool certainty_present = 10;
  float score = 11;
  bool score_present = 12;
  string explain_score = 13;
  bool explain_score_present = 14;
}

message ResultProperties {
  google.protobuf.Struct non_ref_properties = 1;
  repeated ReturnRefProperties ref_props = 2;
  string class_name = 3;
}

message ReturnRefProperties {
  repeated ResultProperties properties = 1;
  string prop_name = 2;
}

